--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_2K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_2K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5dafdbcb",
+   "id": "c199e3b1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3353d20c",
+   "id": "4624d96c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3ad78c9e",
+   "id": "42123aff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f14bbc4b",
+   "id": "08f24ff6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7497a88a",
+   "id": "254025dc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e44321f1",
+   "id": "ea131a15",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd02cb79",
+   "id": "f011b3e2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "46d3614a",
+   "id": "2b82ae5c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "914ee975",
+   "id": "a13ded01",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0834b916",
+   "id": "74951de2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af120128",
+   "id": "abe1f3c3",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "63295cd0",
+   "id": "eca6f5c7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd32ba9c",
+   "id": "8b475551",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c553d7ea",
+   "id": "fe19f74f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "58174502",
+   "id": "a9db4132",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7330a63f",
+   "id": "390e4662",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -288,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  ef323312-150b-4ae3-a96d-a3314ae6525f\n"
+      "Current session uuid:  d2d0e1d6-cb8a-4f6a-8adf-7d6bc25a7024\n"
      ]
     }
    ],
@@ -296,15 +296,15 @@
     "import uuid\n",
     "\n",
     "custom_table_fields_dct = {\n",
-    "    'session_uuid': str(uuid.uuid4()),\n",
-    "    # 'session_uuid': '',\n",
+    "#     'session_uuid': str(uuid.uuid4()),\n",
+    "    'session_uuid': 'd2d0e1d6-cb8a-4f6a-8adf-7d6bc25a7024',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "41e69795",
+   "id": "06bddbb3",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bd36be81",
+   "id": "0eee3138",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f939cf48",
+   "id": "3adcbaca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5ce6a30f",
+   "id": "84e3e1e0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "eec8ff19",
+   "id": "9c22cebe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d163468d",
+   "id": "9097e762",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f559d38",
+   "id": "a54ef049",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d4e67f6",
+   "id": "7582a849",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "04a21040",
+   "id": "7f7e6c63",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e9e9e198",
+   "id": "02cc191e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42b53eec",
+   "id": "d3e198bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:01:46 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-13 18:14:09 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -727,14 +727,16 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'ef323312-150b-4ae3-a96d-a3314ae6525f'}\n"
+      " 'session_uuid': 'd2d0e1d6-cb8a-4f6a-8adf-7d6bc25a7024'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:01:46 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-13 18:14:09 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -753,33 +755,27 @@
       "\n",
       "\n",
       "\n",
-      "In-domain full_df.shape --  (20000, 9)\n",
-      "In-domain init_features_df.shape --  (20000, 10)\n",
-      "In-domain number of rows in X_train_val --  10000\n",
-      "In-domain number of rows in X_test --  10000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-13 17:01:46 experiment_interface.py INFO    : The dataset is preprocessed\n",
-      "INFO:root:The dataset is preprocessed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "In-domain full_df.shape --  (12000, 9)\n",
+      "In-domain init_features_df.shape --  (12000, 10)\n",
+      "In-domain number of rows in X_train_val --  2000\n",
+      "In-domain number of rows in X_test --  10000\n",
       "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
       "Out-of-domain 1 number of rows in X_train_val --  0\n",
       "Out-of-domain 1 number of rows in X_test --  10000\n"
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-13 18:14:10 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0bd9c7d50654bcd964d96554f71bd16",
+       "model_id": "5866f79622ae48f59d8d39cd132b10e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +790,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:01:46 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-13 18:14:10 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -809,7 +805,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:03:59 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-13 18:15:04 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -894,8 +890,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.242279</td>\n",
-       "      <td>0.148651</td>\n",
+       "      <td>1.216632</td>\n",
+       "      <td>0.124526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -918,8 +914,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.501591</td>\n",
-       "      <td>-2.274840</td>\n",
+       "      <td>1.474803</td>\n",
+       "      <td>-2.293452</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -942,8 +938,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.334687</td>\n",
-       "      <td>0.072917</td>\n",
+       "      <td>0.313033</td>\n",
+       "      <td>0.048964</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -966,8 +962,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.480496</td>\n",
-       "      <td>-0.608690</td>\n",
+       "      <td>-1.494166</td>\n",
+       "      <td>-0.631092</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38923</th>\n",
@@ -990,12 +986,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.545324</td>\n",
-       "      <td>-1.063095</td>\n",
+       "      <td>-1.558709</td>\n",
+       "      <td>-1.084463</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 730 columns</p>\n",
+       "<p>5 rows × 520 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1021,13 +1017,13 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   1.242279   0.148651  \n",
-       "25747          0.0          0.0          0.0   1.501591  -2.274840  \n",
-       "13795          0.0          0.0          0.0   0.334687   0.072917  \n",
-       "68724          0.0          0.0          0.0  -1.480496  -0.608690  \n",
-       "38923          0.0          0.0          0.0  -1.545324  -1.063095  \n",
+       "22422          0.0          0.0          0.0   1.216632   0.124526  \n",
+       "25747          0.0          0.0          0.0   1.474803  -2.293452  \n",
+       "13795          0.0          0.0          0.0   0.313033   0.048964  \n",
+       "68724          0.0          0.0          0.0  -1.494166  -0.631092  \n",
+       "38923          0.0          0.0          0.0  -1.558709  -1.084463  \n",
        "\n",
-       "[5 rows x 730 columns]"
+       "[5 rows x 520 columns]"
       ]
      },
      "metadata": {},
@@ -1117,8 +1113,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.658827</td>\n",
-       "      <td>-0.154286</td>\n",
+       "      <td>0.635747</td>\n",
+       "      <td>-0.177721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1141,8 +1137,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.140203</td>\n",
-       "      <td>0.830258</td>\n",
+       "      <td>0.119404</td>\n",
+       "      <td>0.804582</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1165,8 +1161,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.961872</td>\n",
-       "      <td>0.148651</td>\n",
+       "      <td>-0.977823</td>\n",
+       "      <td>0.124526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1189,8 +1185,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.637732</td>\n",
-       "      <td>-2.577777</td>\n",
+       "      <td>-0.655109</td>\n",
+       "      <td>-2.595699</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38923</th>\n",
@@ -1213,12 +1209,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.529171</td>\n",
-       "      <td>0.224385</td>\n",
+       "      <td>0.506661</td>\n",
+       "      <td>0.200088</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 730 columns</p>\n",
+       "<p>5 rows × 520 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1244,13 +1240,13 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.658827  -0.154286  \n",
-       "25747          0.0          0.0          0.0   0.140203   0.830258  \n",
-       "13795          0.0          0.0          0.0  -0.961872   0.148651  \n",
-       "68724          0.0          0.0          0.0  -0.637732  -2.577777  \n",
-       "38923          0.0          0.0          0.0   0.529171   0.224385  \n",
+       "22422          0.0          0.0          0.0   0.635747  -0.177721  \n",
+       "25747          0.0          0.0          0.0   0.119404   0.804582  \n",
+       "13795          0.0          0.0          0.0  -0.977823   0.124526  \n",
+       "68724          0.0          0.0          0.0  -0.655109  -2.595699  \n",
+       "38923          0.0          0.0          0.0   0.506661   0.200088  \n",
        "\n",
-       "[5 rows x 730 columns]"
+       "[5 rows x 520 columns]"
       ]
      },
      "metadata": {},
@@ -1260,22 +1256,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/13, 17:03:59: Tuning LogisticRegression...\n",
-      "2023/11/13, 17:04:35: Tuning for LogisticRegression is finished [F1 score = 0.8025176529578001, Accuracy = 0.8027005459994111]\n"
+      "2023/11/13, 18:15:04: Tuning LogisticRegression...\n",
+      "2023/11/13, 18:15:10: Tuning for LogisticRegression is finished [F1 score = 0.7869411573514632, Accuracy = 0.7869968919444181]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:04:35 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-13 18:15:10 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79f31d2128704cf8a9ddd3a806069279",
+       "model_id": "6eabad634a114c4f9bcd62ede0619db7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1286,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7b56988f5da45e7aff9e351ccda8ef0",
+       "model_id": "7b416b630b0245adbd69c55e88483077",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b06d104",
+   "id": "29790aec",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "afbf323e",
+   "id": "b6d657c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c14cad96",
+   "id": "7dcfa87b",
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfb7fb69",
+   "id": "08b9eb0c",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2436,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21186950",
+   "id": "53c4a13a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2457,7 +2454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42d4aa70",
+   "id": "1956959b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2480,7 +2477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27739710",
+   "id": "03d96687",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2489,7 +2486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f253489e",
+   "id": "9ec3f34a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2510,7 +2507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f54f33b",
+   "id": "1925df55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2533,7 +2530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e29933b7",
+   "id": "d5fc0eea",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2542,7 +2539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de997649",
+   "id": "6b03df0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2563,7 +2560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fbc6d8b",
+   "id": "69e704b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2586,7 +2583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "122b2f0f",
+   "id": "680c2831",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2595,7 +2592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c00e6f98",
+   "id": "ce829a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2616,7 +2613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "756ff576",
+   "id": "30bcb870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2640,7 +2637,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8ee8f2c7",
+   "id": "6768c255",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
