--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_90K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_90K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76a8e919",
+   "id": "00bde77b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "62e31738",
+   "id": "4d121d84",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a882ac2",
+   "id": "a54baf1b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "699f8b3f",
+   "id": "71fe35f8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "58c96d8a",
+   "id": "2ef61cb9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2fc88f4",
+   "id": "6baf692e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4494d189",
+   "id": "29625939",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1883f0c7",
+   "id": "fb93fcf4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a9eee0f",
+   "id": "20a4a7b6",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a5278293",
+   "id": "96ffd9be",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b6fb316",
+   "id": "29c3438b",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e04aae32",
+   "id": "11cf7938",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50d646c9",
+   "id": "b2f34ff7",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a422d734",
+   "id": "3fca080b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "32ae4578",
+   "id": "2e1d46d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7c614de4",
+   "id": "e986b0dc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -288,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b8ad0a86-280d-46fb-8746-d55be289381c\n"
+      "Current session uuid:  cc201523-93eb-4e2e-84f9-eec31ffe0d0a\n"
      ]
     }
    ],
@@ -297,14 +297,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': '',\n",
+    "    'session_uuid': 'cc201523-93eb-4e2e-84f9-eec31ffe0d0a',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "67d7a876",
+   "id": "71be6c41",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6664b2f1",
+   "id": "e2f11893",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cd6f7893",
+   "id": "31885450",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c8b47bda",
+   "id": "f3a63fb7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1c5c7d85",
+   "id": "6846cc59",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b82244e5",
+   "id": "de081345",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "278a5282",
+   "id": "5823537c",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b29f5193",
+   "id": "ee037130",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6cf80f7d",
+   "id": "6a9d729e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4fa0600d",
+   "id": "aeb3b9ee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ee13053d",
+   "id": "1d46d073",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:46:47 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 04:41:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -727,14 +727,16 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b8ad0a86-280d-46fb-8746-d55be289381c'}\n"
+      " 'session_uuid': 'cc201523-93eb-4e2e-84f9-eec31ffe0d0a'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:46:47 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 04:41:21 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -753,9 +755,9 @@
       "\n",
       "\n",
       "\n",
-      "In-domain full_df.shape --  (60000, 9)\n",
-      "In-domain init_features_df.shape --  (60000, 10)\n",
-      "In-domain number of rows in X_train_val --  50000\n",
+      "In-domain full_df.shape --  (100000, 9)\n",
+      "In-domain init_features_df.shape --  (100000, 10)\n",
+      "In-domain number of rows in X_train_val --  90000\n",
       "In-domain number of rows in X_test --  10000\n"
      ]
     },
@@ -763,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:46:48 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 04:41:23 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -779,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "500fee19074c41cabff51514738c613b",
+       "model_id": "843a7d643e3540ef9c89477c735f7442",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:46:48 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 04:41:23 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -809,7 +811,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:52:53 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 04:51:03 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -894,8 +896,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.694396</td>\n",
-       "      <td>-0.206766</td>\n",
+       "      <td>0.694994</td>\n",
+       "      <td>-0.206602</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -918,8 +920,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.172444</td>\n",
-       "      <td>0.794819</td>\n",
+       "      <td>0.173864</td>\n",
+       "      <td>0.798183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -942,8 +944,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.936705</td>\n",
-       "      <td>0.101414</td>\n",
+       "      <td>-0.933536</td>\n",
+       "      <td>0.102563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -966,8 +968,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.610485</td>\n",
-       "      <td>-2.672205</td>\n",
+       "      <td>-0.607830</td>\n",
+       "      <td>-2.679920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38923</th>\n",
@@ -990,12 +992,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.563908</td>\n",
-       "      <td>0.178459</td>\n",
+       "      <td>0.564711</td>\n",
+       "      <td>0.179854</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 776 columns</p>\n",
+       "<p>5 rows × 795 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1021,13 +1023,13 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.694396  -0.206766  \n",
-       "25747          0.0          0.0          0.0   0.172444   0.794819  \n",
-       "13795          0.0          0.0          0.0  -0.936705   0.101414  \n",
-       "68724          0.0          0.0          0.0  -0.610485  -2.672205  \n",
-       "38923          0.0          0.0          0.0   0.563908   0.178459  \n",
+       "22422          0.0          0.0          0.0   0.694994  -0.206602  \n",
+       "25747          0.0          0.0          0.0   0.173864   0.798183  \n",
+       "13795          0.0          0.0          0.0  -0.933536   0.102563  \n",
+       "68724          0.0          0.0          0.0  -0.607830  -2.679920  \n",
+       "38923          0.0          0.0          0.0   0.564711   0.179854  \n",
        "\n",
-       "[5 rows x 776 columns]"
+       "[5 rows x 795 columns]"
       ]
      },
      "metadata": {},
@@ -1117,8 +1119,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.281593</td>\n",
-       "      <td>0.101414</td>\n",
+       "      <td>1.281264</td>\n",
+       "      <td>0.102563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1141,8 +1143,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.542569</td>\n",
-       "      <td>-2.364025</td>\n",
+       "      <td>1.541829</td>\n",
+       "      <td>-2.370755</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1165,8 +1167,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.368176</td>\n",
-       "      <td>0.024369</td>\n",
+       "      <td>0.369288</td>\n",
+       "      <td>0.025272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1189,8 +1191,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.458657</td>\n",
-       "      <td>-0.669036</td>\n",
+       "      <td>-1.454666</td>\n",
+       "      <td>-0.670349</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38923</th>\n",
@@ -1213,12 +1215,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.523902</td>\n",
-       "      <td>-1.131305</td>\n",
+       "      <td>-1.519807</td>\n",
+       "      <td>-1.134096</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 776 columns</p>\n",
+       "<p>5 rows × 795 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1244,13 +1246,13 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   1.281593   0.101414  \n",
-       "25747          0.0          0.0          0.0   1.542569  -2.364025  \n",
-       "13795          0.0          0.0          0.0   0.368176   0.024369  \n",
-       "68724          0.0          0.0          0.0  -1.458657  -0.669036  \n",
-       "38923          0.0          0.0          0.0  -1.523902  -1.131305  \n",
+       "22422          0.0          0.0          0.0   1.281264   0.102563  \n",
+       "25747          0.0          0.0          0.0   1.541829  -2.370755  \n",
+       "13795          0.0          0.0          0.0   0.369288   0.025272  \n",
+       "68724          0.0          0.0          0.0  -1.454666  -0.670349  \n",
+       "38923          0.0          0.0          0.0  -1.519807  -1.134096  \n",
        "\n",
-       "[5 rows x 776 columns]"
+       "[5 rows x 795 columns]"
       ]
      },
      "metadata": {},
@@ -1260,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/16, 15:52:53: Tuning LogisticRegression...\n",
-      "2023/11/16, 15:54:23: Tuning for LogisticRegression is finished [F1 score = 0.7556295614893799, Accuracy = 0.803400073844197]\n"
+      "2023/11/23, 04:51:03: Tuning LogisticRegression...\n",
+      "2023/11/23, 04:53:43: Tuning for LogisticRegression is finished [F1 score = 0.7594348472978473, Accuracy = 0.8068333333333334]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:54:23 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 04:53:43 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "deead9d63cfe457589caf8756c6a2ad6",
+       "model_id": "8581ff1f41734b1d95f18d522d85c57a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a387a5ddff241978276f181d9f54535",
+       "model_id": "99a30e2ea0d54b25af8901ec461caec8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d45887a",
+   "id": "79756c4b",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bc094b70",
+   "id": "577034d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2e0cb6cf",
+   "id": "1394e39f",
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e17d1f7",
+   "id": "eb8e5e63",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1968,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1a7ea58",
+   "id": "f1e220e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,7 +1993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51b52c4",
+   "id": "b0b94fea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2013,7 +2016,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c05a83f",
+   "id": "75342786",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2022,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a20e1be9",
+   "id": "f4322db8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2044,7 +2047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0f0a30a",
+   "id": "2332ade5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d4ba469",
+   "id": "21ab0a36",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2076,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c52a8cdc",
+   "id": "060dcbd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18438939",
+   "id": "864f3895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2121,7 +2124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc8e2340",
+   "id": "cd7e6d0f",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2130,7 +2133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a8e92b3",
+   "id": "22acc14e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2152,7 +2155,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d8e294a7",
+   "id": "e765c9b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2181,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e754225",
+   "id": "8d15011d",
    "metadata": {},
    "outputs": [],
    "source": []
