Prepared 2K, 5K, 10K, 70K exp for unfair LR

--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_10K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_10K/Income_2018.ipynb
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_poor_income_LR_10K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 10_000\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'poor_income_2018_config.yaml')\n",
@@ -727,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '6052b92f-f6ef-4711-a04c-eb9dd49e06bb'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '6052b92f-f6ef-4711-a04c-eb9dd49e06bb'}\n"
      ]
     },
     {
@@ -1263,8 +1261,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/13, 17:06:36: Tuning LogisticRegression...\n",
-      "2023/11/13, 17:06:50: Tuning for LogisticRegression is finished [F1 score = 0.7360945585818385, Accuracy = 0.7878001357424286]\n",
-      "\n"
+      "2023/11/13, 17:06:50: Tuning for LogisticRegression is finished [F1 score = 0.7360945585818385, Accuracy = 0.7878001357424286]\n"
      ]
     },
     {
@@ -1341,7 +1338,6 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__220650.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1374,9 +1370,7 @@
       " 'experiment_iteration': 'Exp_iter_2',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 200,\n",
-      " 'session_uuid': '6052b92f-f6ef-4711-a04c-eb9dd49e06bb'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '6052b92f-f6ef-4711-a04c-eb9dd49e06bb'}\n"
      ]
     },
     {
@@ -1987,7 +1981,6 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__220650.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2041,7 +2034,6 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__220650.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2095,7 +2087,6 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__220650.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2149,7 +2140,6 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__220650.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
