--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_10K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_10K/Income_2018.ipynb
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_rich_income_LR_10K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 10_000\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'rich_income_2018_config.yaml')\n",
@@ -727,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'ef323312-150b-4ae3-a96d-a3314ae6525f'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'ef323312-150b-4ae3-a96d-a3314ae6525f'}\n"
      ]
     },
     {
@@ -1263,8 +1261,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/13, 17:03:59: Tuning LogisticRegression...\n",
-      "2023/11/13, 17:04:35: Tuning for LogisticRegression is finished [F1 score = 0.8025176529578001, Accuracy = 0.8027005459994111]\n",
-      "\n"
+      "2023/11/13, 17:04:35: Tuning for LogisticRegression is finished [F1 score = 0.8025176529578001, Accuracy = 0.8027005459994111]\n"
      ]
     },
     {
