--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_2K/Income_2018-Copy1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_2K/Income_2018-Copy1.ipynb
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_poor_income_LR_2K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 2_000\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'poor_income_2018_config.yaml')\n",
@@ -727,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n"
      ]
     },
     {
@@ -1257,8 +1255,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/13, 18:16:34: Tuning LogisticRegression...\n",
-      "2023/11/13, 18:16:37: Tuning for LogisticRegression is finished [F1 score = 0.7095380995232762, Accuracy = 0.7649966308137222]\n",
-      "\n"
+      "2023/11/13, 18:16:37: Tuning for LogisticRegression is finished [F1 score = 0.7095380995232762, Accuracy = 0.7649966308137222]\n"
      ]
     },
     {
@@ -1335,7 +1332,6 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__231637.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1368,9 +1364,7 @@
       " 'experiment_iteration': 'Exp_iter_2',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 200,\n",
-      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n"
      ]
     },
     {
@@ -1975,7 +1969,6 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__231637.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2009,9 +2002,7 @@
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'intervention_param': 0.7,\n",
       " 'model_init_seed': 300,\n",
-      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n"
      ]
     },
     {
@@ -2622,7 +2613,6 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__231637.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -2656,9 +2646,7 @@
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'intervention_param': 0.7,\n",
       " 'model_init_seed': 400,\n",
-      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n"
      ]
     },
     {
@@ -3269,7 +3257,6 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__231637.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -3303,9 +3290,7 @@
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'intervention_param': 0.7,\n",
       " 'model_init_seed': 500,\n",
-      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n"
      ]
     },
     {
@@ -3916,7 +3901,6 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231113__231637.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -3955,9 +3939,7 @@
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'intervention_param': 0.7,\n",
       " 'model_init_seed': 600,\n",
-      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n"
      ]
     },
     {
