--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_70K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_70K/Income_2018.ipynb
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_poor_income_LR_70K'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 70_000\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'poor_income_2018_config.yaml')\n",
@@ -727,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '97512376-2490-421c-a1ca-bbdeb46c82b9'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '97512376-2490-421c-a1ca-bbdeb46c82b9'}\n"
      ]
     },
     {
@@ -1263,8 +1261,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/23, 04:45:30: Tuning LogisticRegression...\n",
-      "2023/11/23, 04:47:09: Tuning for LogisticRegression is finished [F1 score = 0.7586242739990129, Accuracy = 0.8061429082874909]\n",
-      "\n"
+      "2023/11/23, 04:47:09: Tuning for LogisticRegression is finished [F1 score = 0.7586242739990129, Accuracy = 0.8061429082874909]\n"
      ]
     },
     {
